[package]
name = "advent"
version = "0.1.0"
edition = "2021"
default-run = "advent"

[[bin]]
name = "all"
path = "src/bin/all.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
itertools = "0.11.0"
num = "0.4.1"
petgraph = "0.6.4"
priority-queue = "1.3.2"
rand = "0.8.5"
regex = "1.10.2"
threadpool = "1.8.1"
z3 = "0.12.1"
